--- a/Sitio web LearnWeb/Descargables.html
+++ b/Sitio web LearnWeb/Descargables.html
@@ -11,7 +11,7 @@
 <body>
     <Header>
         <nav>
-           <a href="Inicio.html">Inicio</a>
+           <a href="Index.html">Inicio</a>
             <a href="Contenidos.html">Contenidos</a>
             <a href="Descargables.html">Descargables</a>
             <a href="Docentes.html">Docentes</a>
