--- a/Sitio web LearnWeb/Index.html
+++ b/Sitio web LearnWeb/Index.html
@@ -18,7 +18,7 @@
   
     <Header>
         <nav>
-            <a href="Index.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="Contenidos.html">Contenidos</a>
             <a href="Descargables.html">Descargables</a>
             <a href="Docentes.html">Docentes</a>
