--- a/Nosotros.html
+++ b/Nosotros.html
@@ -17,7 +17,7 @@
     </header>    
     <div class="menu"">
       <ul class="nav">
-            <li><a href="Index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="Contenidos.html">Contenidos</a>
             <ul>
               <li><a href="paginaConstruccion.html">Primer semestre</a></li>
