--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <section class="textos-encabezados">
             <h1>Inicio</h1>
-            <h2>Una plataforma para tu educacion</h2>
+            <h2>Desarrollando Oportunidades</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
